homework-3/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: arch-homework-service
spec:
  selector:
    app: arch-homework
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
