homework-3/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: arch-homework-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/(otusapp/[^/]+/|/|$)?(.*)"
            backend:
              service:
                name: arch-homework-service
                port:
                  number: 80
